[package]
name = "subseq-adf-convert"
version = "0.2.1"
edition = "2024"

[dependencies]
chrono = "0.4.41"
htmd = "0.2.1"
html-escape = "0.2.13"
html5ever = "0.29.1"
markdown = "1.0.0"
markup5ever = "0.14.1"
markup5ever_rcdom = "=0.5.0-unofficial"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tracing = "0.1.41"
urlencoding = "2.1.3"

[dev-dependencies]
rand = "0.9.1"

[features]
default = []
fuzzing = []
